Fix up flicker, and parsing by Xcode.
The javascript as written had trouble being parsed by the Xcode IDE due to the // in the regexp.
By turning off the height:100% in the css, we don't redraw the entire screen every time we
update the bandwidth stats.

BUG=none
TEST=Make a connection and turn on Quartz Debug on Mac. Turn on Flash screen updates. The entire screen should not flash once per second.

Review URL: http://codereview.chromium.org/7008020

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@86723 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 5ecfbdd7b3f61d372536bd68cc9a372beeec9dfb

--- a/remoting/webapp/me2mom/main.css
+++ b/remoting/webapp/me2mom/main.css
@@ -90,7 +90,6 @@ h1 {
   -webkit-user-select: none;
   overflow: auto;
   width: 100%;
-  height: 100%;
 }
 
 .gaia_font {
